# Web_deteksi_gaya_belajar_kelompok-3

./: .gitignore  .replit  README.md  app.py  database.py  expert_system.py  kuisioner_data.py  migrate_database.py  pdf_generator.py  pyproject.toml  requirements.txt  team_data.py
attached_assets/team/: README.md
