[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly>=6.4.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.4",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "streamlit-extras>=0.7.8",
]
